@@ -1,3 +1,8 @@
+Aug 9, 2005
+
+  * Modify root_property/2 to check for super-properties of the same
+    class only.
+
 Jul 26, 2005
 
   * Fixed owl_satisfies/2 handling for `complement_of'.  Bob Wielinga.
